--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ theme:
   #   font: #谷歌字体，自行搜索
   #   text: Bitter  #文本字体
   #   code: Roboto Mono  #代码字体
-  # logo: assets/favicon.png #左上角logo，可插入图片链接
+  logo:  about/image/top.jpg
   favicon: https://s2.loli.net/2024/04/26/PmRdM9iGnvOJHgu.png # 网页icon
   palette: # 主题色配置
     - media: "(prefers-color-scheme)"
@@ -50,8 +50,8 @@ theme:
     - content.tabs.link
     - content.tooltips
     - content.code.copy #代码复制
-    - content.action.edit
-    - content.action.view
+    #- content.action.edit
+    #- content.action.view
     - content.code.annotate
   language: zh # 一些提示性的文字会变成中文
   icon:
@@ -62,68 +62,41 @@ repo_url: https://github.com/Gaiake # 右上角点击跳转的链接
 repo_name: Gaiake # 右上角的名字
 # [Navigtion]
 nav:
-  - Home: index.md
+  - Home: README.md
   - About: 
       - 个人简介: about.md
-      - 个人博客: https://gaiake.github.io
-  - HPC: HPC1.md
-  # - 主页: index.md
-  - MKdocs中文教程:
-      - MKdocs教程(三部曲):
-          - 0. Mkdocs教程前言: blog/Mkdocs/mkfirst.md
-          - 1. 利用mkdocs部署个人静态博客网页至GitHub pages: blog/Mkdocs/mkdocs1.md
-          - 2. Mkdocs部署静态网页至GitHub pages配置说明(mkdocs.yml): blog/Mkdocs/mkdocs2.md
-          - 3. 解决 mkdocs部署 Github Pages 自定义域名失效的问题: blog/Mkdocs/mkdocs3.md
-      - Mkdocs美化:
-          - 添加Mkdocs博客: blog/Mkdocs/mkdocsblog.md
-          - 网页圆角化设计: blog/websitebeauty/yuanjiaohua.md
-          - 添加评论系统(giscus为例): blog/websitebeauty/mkcomments.md
-          - 添加在线聊天: blog/websitebeauty/webtalknow.md
-          - 添加友链: blog/websitebeauty/linktech.md
-          - 添加顶部公告栏: blog/websitebeauty/header.md
-          - 修改网站字体: blog/websitebeauty/mkdocsfont.md
-          - JS实现鼠标样式: blog/websitebeauty/shubiao.md
-          - 背景特效: blog/websitebeauty/backgroud.md
-          - 添加404页面: blog/websitebeauty/404.md
-          - 为MKdocs添加文章修订时间戳: blog/websitebeauty/time.md
-  - 建设MKdocs技能指北:
-      - Markdown:
-          - Markdown指南: develop/Markdown/markdown.md
-          - MWeb Pro: develop/Markdown/MWeb.md
-      - Git 实用技巧: develop/git.md
-      - 利用Lighthouse测试网站性能: develop/lighthouse.md
-      - 如何将 github pages 迁移到 vercel 上托管: develop/vercel.md
-      - 设计美学:
-          - 唐·诺曼—情感设计的三个层次: develop/designbeauty/db1.md
-          - 我对设计的一些观点: develop/designbeauty/my-to-desihn.md
-
-  - 标签: tag.md
-  - 留言板: liuyanban.md
-  - Blogger:
-      - index: blog/index.md
-  - 友链:
-      - 友链: about/link.md
-  - 关于:
-      - 作者个人简介: about/geren.md
-      - 功能测试: about/test.md
-  - 个人博客: https://wcowin.work
-  - 使用本主题: https://github.com/new?template_name=Mkdocs-Wcowin&template_owner=Wcowin
+  - Academic Courses:
+      - 基础课程:
+          - Calculus: courses/MA101.md
+          - Linear Algebra: courses/MA102.md
+          - Probability Theory and Mathematical Statistics: courses/MA103.md
+          - Discrete Mathematics and its Applications: courses/CS103.md
+      - 专业课程:
+          - Fundamentals of C Programming and Laboratory: courses/CS101.md
+          - Fundamentals of Data Structures: courses/CS102.md
+          - HPC101: courses/HPC1.md
+      - 体育类课程: courses/PE.md
+      - 思政类课程: courses/Political.md
+      - 通识类课程: courses/General.md
 
 copyright: Copyright &copy; 2024~2025 Gaiake/All Rights Reserved. # 左下角的版权声明
 extra:
-  alternate:
-    - name: 简体中文
-      link: /
-      # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-      lang: zh   
-    - name: English
-      link: /Mkdocs-Wcowin/en/
-      # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-      lang: en
-    - name: China(TW)
-      link: /Mkdocs-Wcowin/ZH-TW/
-      # https://wcowin-work.translate.goog/?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-CN&_x_tr_pto=wapp
-      lang: zh-TW
+  mathjax_config:
+    chtml:
+      fontURL: 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/output/chtml/fonts'  # 字体 CDN
+  #alternate:
+  #  - name: 简体中文
+  #    link: /
+  #    # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
+  #    lang: zh   
+  #  - name: English
+  #    link: /Mkdocs-Wcowin/en/
+  #    # https://wcowin-work.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=zh-CN&_x_tr_pto=wapp
+  #    lang: en
+  #  - name: China(TW)
+  #    link: /Mkdocs-Wcowin/ZH-TW/
+  #    # https://wcowin-work.translate.goog/?_x_tr_sl=zh-CN&_x_tr_tl=zh-TW&_x_tr_hl=zh-CN&_x_tr_pto=wapp
+  #    lang: zh-TW
   generator: false #是否删除页脚显示“使用 MkDocs 材料制造”
   social:
     - icon: fontawesome/brands/weixin
@@ -133,7 +106,6 @@ extra:
       link: https://github.com/Gaiake
     - icon: fontawesome/regular/envelope #联系方式图标
       link: mailto:<mayuxi660@gmail.com> #邮件联系方式
-
   analytics:
     provider: google #谷歌分析
     property: ##如果你 clone 了my模板，请将这个修改为你的
@@ -260,26 +232,18 @@ markdown_extensions: #详见https://squidfunk.github.io/mkdocs-material/setup/ex
   #     permalink: "\ue157"
 
 extra_javascript:
-  # - javascripts/extra.js #自定义javascript
-  - https://cdn.jsdelivr.net/gh/Wcowin/Wcowin.github.io@main/docs/javascripts/extra.js  # extra的cdn
-  - javascripts/mathjax.js #Latex支持
-  - https://polyfill.io/v3/polyfill.min.js?features=es6 #Latex支持
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js #Latex支持
-  # - ckplayer/js/ckplayer.js #播放器配置
-  # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.min.js  #gitalk支持
-  - https://cdn.jsdelivr.net/npm/mermaid@10.0.2/dist/add-html-label-6e56ed67.min.js #忘了
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 extra_css:
-  - stylesheets/extra.css # 自定义CSS
-  - stylesheets/link.css #友链配置
-  - stylesheets/customize.css # 搜索圆角优化
+  #- stylesheets/extra.css # 自定义CSS
+  #- stylesheets/link.css #友链配置
+  #- stylesheets/customize.css # 搜索圆角优化
   # - assets/stylesheets/portfolio.css
   # - stylesheets/video.css #播放器可选配置
   # - https://cdn.jsdelivr.net/npm/gitalk@latest/dist/gitalk.css #gitalk支持
   # - ckplayer/css/ckplayer.css   #播放器配置
   # - https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css # font-awesome表情支持
   # - https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css  #分享支持
-
   - https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css #字体
   # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-lite-webfont@1.1.0/style.css #字体
   # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-tc-webfont@1.0.0/style.css  #字体
